# ParametricTemplate

./: .gitignore  CMakeLists.txt  CMakeLists.txt.lVcwiP  README.md
Annotation/: CMakeLists.txt
Annotation/include/: annotation.h  annotationutilities.h  attribute.h  facet.h  geometricattribute.h  lineannotation.h  pointannotation.h  relationship.h  semanticattribute.h  spthread.h  surfaceannotation.h
Annotation/src/: annotation.cpp  annotationutilities.cpp  attribute.cpp  facet.cpp  geometricattribute.cpp  lineannotation.cpp  pointannotation.cpp  relationship.cpp  semanticattribute.cpp  spthread.cpp  surfaceannotation.cpp
DataStructures/: CMakeLists.txt
DataStructures/include/: arc.h  graph.h  node.h  tree.h
DataStructures/src/: testGraph.cpp  testTree.cpp
Deformation/: .gitignore  CMakeLists.txt
Deformation/cmake/: CMakeLists.txt
Deformation/include/: barycentriccoordinates.h  dualquaternion.h  gcthread.h  greencoordinates.h  meanvaluecoordinates.h  meanvaluecoordinatesju.h  mvcthread.h  quaternion.h
Deformation/src/: dualquaternion.cpp  gcthread.cpp  greencoordinates.cpp  main.cpp  meanvaluecoordinates.cpp  meanvaluecoordinatesju.cpp  mvcthread.cpp  quaternion.cpp
Icons/: .~lock.constraint.png#  QTCageRenderer.cbp  icons.qrc  icons.qrc.depends
ImatiSTLExtension/: CMakeLists.txt
ImatiSTLExtension/ImatiSTL/: CMakeLists.txt
ImatiSTLExtension/ImatiSTL/include/Kernel/: point.h
ImatiSTLExtension/ImatiSTL/include/Rendering/: drawablemesh.h
ImatiSTLExtension/ImatiSTL/include/TMesh/: edge.h  vertex.h
ImatiSTLExtension/ImatiSTL/src/Algorithms/: simplification.cpp
ImatiSTLExtension/ImatiSTL/src/Kernel/: graph.cpp  orientation.cpp  point.cpp  tmesh.cpp
ImatiSTLExtension/ImatiSTL/src/Rendering/: drawablemesh.cpp
ImatiSTLExtension/ImatiSTL/src/TMesh/: edge.cpp  triangle.cpp
ImatiSTLExtension/include/: extendedtrimesh.h
ImatiSTLExtension/src/: extendedtrimesh.cpp
LP/: TestGLPK.cpp  non_rigid_registration.cpp
gui/: annotationconstraintdialog.ui  annotationdialog.ui  annotationselectiondialog.ui  annotationselectionpropertydialog.ui  annotationwidget.ui  annotationwindow.ui  attributetypedialog.ui  attributewidget.ui  checkablelist.ui  colorform.ui  correspondencesdialog.ui  geometricattributedialog.ui  infopalette.ui  layerdialog.ui  mainwindow.ui  measureslistwidget.ui  relationshipsdialog.ui  semanticattributedialog.ui  transparencydialog.ui
include/: annotationconstraintdialog.h  annotationdialog.h  annotationfilemanager.h  annotationmeasurerelationship.h  annotationmeasuresconstraint.h  annotationsconstraint.h  annotationselectiondialog.h  annotationsrelationship.h  annotationwindow.h  attributeconstraint.h  attributewidget.h  categorybutton.h  checkablelist.h  circularlist.h  colorform.h  constraintsolver.h  correspondencesdialog.h  doublyconnectednode.h  drawableannotation.h  drawableareaannotation.h  drawableattribute.h  drawableboundingmeasure.h  drawableeuclideanmeasure.h  drawablegeodesicmeasure.h  drawablegraph.h  drawableheightmeasure.h  drawablelineannotation.h  drawablemesh.h  drawablepointannotation.h  layerdialog.h  mainthread.h  mainwindow.h  measureslistwidget.h  relationshipsdialog.h  semanticattributedialog.h  semanticconstraint.h  transparencydialog.h  utilities.h  vtkgraphtopolydataextended.h
include/Styles/: annotationselectioninteractorstyle.h  cageverticesselectionstyle.h  correspondencesselectionstyle.h  lineselectionstyle.h  measurestyle.h  meshdeformationstyle.h  semanticgraphinteractionstyle.h  triangleselectionstyle.h  verticesselectionstyle.h
nanoflann/: .gitignore  .gitmodules  .travis.sh  .travis.yml  CHANGELOG.txt  CMakeLists.txt  COPYING  README.md
nanoflann/examples/: KDTreeVectorOfVectorsAdaptor.h
nanoflann/packaging/debian/: changelog  control  copyright  libnanoflann-dev.install  rules
src/: annotationconstraintdialog.cpp  annotationdialog.cpp  annotationfilemanager.cpp  annotationmeasurerelationship.cpp  annotationmeasuresconstraint.cpp  annotationsconstraint.cpp  annotationselectiondialog.cpp  annotationsrelationship.cpp  annotationwindow.cpp  attributeconstraint.cpp  attributewidget.cpp  categorybutton.cpp  checkablelist.cpp  circularlist.cpp  colorform.cpp  constraintsolver.cpp  correspondencesdialog.cpp  drawableareaannotation.cpp  drawableboundingmeasure.cpp  drawableeuclideanmeasure.cpp  drawablegeodesicmeasure.cpp  drawableheightmeasure.cpp  drawablelineannotation.cpp  drawablemesh.cpp  drawablepointannotation.cpp  layerdialog.cpp  main.cxx  mainwindow.cxx  measureslistwidget.cpp  relationshipsdialog.cpp  semanticattributedialog.cpp  transparencydialog.cpp  utilities.cpp  vtkgraphtopolydataextended.cpp
src/Styles/: annotationselectioninteractorstyle.cpp  cageverticesselectionstyle.cpp  correspondencesselectionstyle.cpp  lineselectionstyle.cpp  measurestyle.cpp  meshdeformationstyle.cpp  semanticgraphinteractionstyle.cpp  triangleselectionstyle.cpp  verticesselectionstyle.cpp
triangle/: CMakeLists.txt
